manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: axion-ingestion-service
spec:
  selector:
    app: ingestion-service
  ports:
  - port: 8080
    targetPort: 8000
