manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingestion-ingress
  labels:
    app.kubernetes.io/name: ingestion-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: ingestion.krishomtrendstore.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: axion-ingestion-service
            port: 
              number: 8080
